project(flush)
cmake_minimum_required(VERSION 2.6)
find_package(Qt4 COMPONENTS Phonon REQUIRED)
include(${QT_USE_FILE})
include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} ${QT_PHONON_INCLUDE_DIR})

set(flush_SRCS flush.cpp main.cpp)
QT4_ADD_RESOURCES(flush_RCC resources.qrc)
qt4_automoc(${flush_SRCS})
add_executable(flush ${flush_SRCS} ${flush_RCC})
target_link_libraries(flush ${QT_QTCORE_LIBRARY} ${QT_PHONON_LIBRARY})
